test: add tests.

--- a/test/gtest/Makefile
+++ b/test/gtest/Makefile
@@ -3,7 +3,7 @@ topdir = ../../
 includedir = $(topdir)include
 srcdir = $(topdir)src
 SUBDIRS := $(srcdir)/backend  $(srcdir)/common $(srcdir)/lock \
-		   $(srcdir)/memory $(srcdir)/parser $(srcdir)/storage \
+		   $(srcdir)/memory $(srcdir)/parser $(srcdir)/storage $(srcdir)/sys\
 		   $(srcdir)/trans $(srcdir)/utils
 objects := $(patsubst %.cpp, %.o, $(wildcard *.cpp)) $(patsubst %.c, %.o, $(shell find $(SUBDIRS) -name "*.c"))
 
@@ -12,12 +12,12 @@ CPPLDFLAGS= -pthread -lz
 ifdef DEBUG
 	CPPFLAGS := -g -O0 -Wall -I/usr/src/googletest/googletest/include -I/usr/src/googletest/googletest \
 		   -I$(includedir)/lock -I$(includedir)/common  -I$(includedir)/utils -I$(includedir)/memory \
-		   -I$(includedir)/backend -I$(includedir)/trans -I$(includedir)/storage -I$(includedir)/storage \
+		   -I$(includedir)/backend -I$(includedir)/trans -I$(includedir)/storage -I$(includedir)/storage -I$(includedir)/sys \
 		   -I$(includedir)/parser -I/usr/local/include/gtest.
 else
 	CPPFLAGS := -O2 -I/usr/src/googletest/googletest/include -I/usr/src/googletest/googletest \
 		   -I$(includedir)/lock -I$(includedir)/common  -I$(includedir)/utils -I$(includedir)/memory \
-		   -I$(includedir)/backend -I$(includedir)/trans -I$(includedir)/storage -I$(includedir)/storage \
+		   -I$(includedir)/backend -I$(includedir)/trans -I$(includedir)/storage -I$(includedir)/storage  -I$(includedir)/sys \
 		   -I$(includedir)/parser -I/usr/local/include/gtest.
 endif
 
