--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -1,6 +1,7 @@
 
 includedir = ../../include
-headerdirs = $(includedir)/utils $(includedir)/common $(includedir)/memory $(includedir)/lock $(includedir)/trans
+headerdirs = $(includedir)/utils $(includedir)/common $(includedir)/memory \
+			 $(includedir)/sys $(includedir)/lock $(includedir)/trans
 headers := $(shell find $(headerdirs) -name "*.h")
 objects := $(patsubst %.c,%.o,$(wildcard *.c))
 CC = gcc
