--- a/test/gtest/Makefile
+++ b/test/gtest/Makefile
@@ -13,12 +13,12 @@ ifdef DEBUG
 	CPPFLAGS := -g -O0 -Wall -I/usr/src/googletest/googletest/include -I/usr/src/googletest/googletest \
 		   -I$(includedir)/lock -I$(includedir)/common  -I$(includedir)/utils -I$(includedir)/memory \
 		   -I$(includedir)/backend -I$(includedir)/trans -I$(includedir)/storage -I$(includedir)/storage -I$(includedir)/sys \
-		   -I$(includedir)/parser -I/usr/local/include/gtest.
+		   -I$(includedir)/parser -I/usr/local/include/gtest -D DEBUG
 else
-	CPPFLAGS := -O2 -I/usr/src/googletest/googletest/include -I/usr/src/googletest/googletest \
+	CPPFLAGS := -O3 -I/usr/src/googletest/googletest/include -I/usr/src/googletest/googletest \
 		   -I$(includedir)/lock -I$(includedir)/common  -I$(includedir)/utils -I$(includedir)/memory \
 		   -I$(includedir)/backend -I$(includedir)/trans -I$(includedir)/storage -I$(includedir)/storage  -I$(includedir)/sys \
-		   -I$(includedir)/parser -I/usr/local/include/gtest.
+		   -I$(includedir)/parser -I/usr/local/include/gtest
 endif
 
 
